--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,18 @@ doc/version.texi
 m4/*
 test-results/*
 
-
+api/Doxyfile
+src/.deps/
+src/accutest
+src/integratelist
+src/integratexyz
+src/jettest
+src/randtest
+src/rbvtest
+src/rundynamics
+src/syn2ds9
+src/vtest
+src/xyz2fits
+src/xyz2psd
+src/xyzinfo
+stamp-h1
