--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,2 +1,2 @@
 info_TEXINFOS = cometsuite.texi
-AM_MAKEINFOHTMLFLAGS = --css-include=base.css
+AM_MAKEINFOHTMLFLAGS = --css-include=$(top_srcdir)/doc/base.css
