Change jettest to vejtest and update test directory to use scripts

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,2 +1,2 @@
-pkgdata_DATA = am-carbon.fits am-olivine50.fits rd-accutest1.png	\
+dist_pkgdata_DATA = am-carbon.fits am-olivine50.fits rd-accutest1.png	\
 rd-accutest2.png rd-psdtest.png rd-syndynes.png
